--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="styles.css">
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </style>
@@ -16,8 +17,8 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 <!-- Header -->
 <header class="w3-container w3-center w3-padding-32">
-  <h1><b>MY BLOG</b></h1>
-  <p>Welcome to the blog of <span class="w3-tag">unknown</span></p>
+  <h1><b>AI FOR HUMANS</b></h1>
+  <p>understanding <span class="w3-tag">AI</span> to understand <span class="w3-tag">Humans</span></p>
 </header>
 
 <!-- Grid -->
@@ -25,7 +26,6 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 <!-- Blog entries -->
 <div class="w3-col l8 s12">
-
 
   <!-- Blog entry -->
   <div id="medium-widget"></div>
@@ -53,7 +53,12 @@ and is wrapped around the whole page content, except for the footer in this exam
       <li class="w3-padding-16">
         <span class="iconify" data-icon="bi:instagram"></span>
         <span class="w3-large">Instagram</span><br>
-        <a chref='https://www.instagram.com/ai_for_humans/?hl=en'>@ai_for_humans</a>
+        <a href='https://www.instagram.com/ai_for_humans/?hl=en'>@ai_for_humans</a>
+      </li>
+      <li class="w3-padding-16">
+        <span class="iconify" data-icon="bi:globe"></span>
+        <span class="w3-large">Me</span><br>
+        <a href='https://www.alecsharpie.me'>www.alecsharpie.me</a>
       </li>
     </ul>
   </div>
