--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@ and is wrapped around the whole page content, except for the footer in this exam
   <img src="/w3images/avatar_g.jpg" style="width:100%">
     <div class="w3-container w3-white">
       <h4><b>My Name</b></h4>
-      <p>Just me, myself and I, exploring the universe of uknownment. I have a heart of love and a interest of lorem ipsum and mauris neque quam blog. I want to share my world with you.</p>
+      <p>Artificial Intelligence is a powerful force changing the way we live our lives.</p>
+      <p>We humans are at the helm of this force.</p>
+      <p>Lets take this oppourtunity to learn from these techniques, like the powerful teachers they are.</p>
     </div>
   </div><hr>
 
   <!-- Posts -->
   <div class="w3-card w3-margin">
     <div class="w3-container w3-padding">
-      <h4>Socials</h4>
+      <h4>Links</h4>
     </div>
     <ul class="w3-ul w3-white">
       <li class="w3-padding-16">
@@ -75,8 +77,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 <!-- Footer -->
 <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-  <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
-  <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
+
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
