--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@ and is wrapped around the whole page content, except for the footer in this exam
       <h4><b>My Name</b></h4>
       <p>Artificial Intelligence is a powerful force changing the way we live our lives.</p>
       <p>We humans are at the helm of this force.</p>
-      <p>Lets take this oppourtunity to learn from these techniques, like the powerful teachers they are.</p>
+      <p>Lets take this oppourtunity to learn from these models, like the powerful teachers they are.</p>
+      <p>Doesn't that sound better than guiding human attention towards ads?</p>
     </div>
   </div><hr>
 
@@ -56,6 +57,11 @@ and is wrapped around the whole page content, except for the footer in this exam
         <span class="iconify" data-icon="bi:instagram"></span>
         <span class="w3-large">Instagram</span><br>
         <a href='https://www.instagram.com/ai_for_humans/?hl=en'>@ai_for_humans</a>
+      </li>
+      <li class="w3-padding-16">
+        <span class="iconify" data-icon="bi:twitter"></span>
+        <span class="w3-large">Twitter</span><br>
+        <a href='https://twitter.com/ai_for_humans'>@ai_for_humans</a>
       </li>
       <li class="w3-padding-16">
         <span class="iconify" data-icon="bi:globe"></span>
