--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-col l4">
   <!-- About Card -->
   <div class="w3-card w3-margin w3-margin-top">
-  <img src="/w3images/avatar_g.jpg" style="width:100%">
+  <img src="images/logo_ai_for_humans.jpg" style="width:100%">
     <div class="w3-container w3-white">
       <h4><b>My Name</b></h4>
       <p>Artificial Intelligence is a powerful force changing the way we live our lives.</p>
