--- a/index.html
+++ b/index.html
@@ -3,30 +3,29 @@
 <title>AI FOR HUMANS</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="styles.css">
 <link rel="icon" type="image/png" href="images/favicon.png"/>
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </style>
-<body class="w3-light-grey">
+<body class="light-grey">
 
-<!-- w3-content defines a container for fixed size centered content,
+<!-- content defines a container for fixed size centered content,
 and is wrapped around the whole page content, except for the footer in this example -->
-<div class="w3-content" style="max-width:1400px">
+<div class="content" style="max-width:1400px">
 
 <!-- Header -->
-<header class="w3-container w3-center w3-padding-32">
+<header class="container center padding-32">
   <h1><b>AI FOR HUMANS</b></h1>
-  <p>understanding <span class="w3-tag">AI</span> to understand <span class="w3-tag">Humans</span></p>
+  <p>understanding <span class="tag">AI</span> to understand <span class="tag">Humans</span></p>
 </header>
 
 <!-- Grid -->
-<div class="w3-row">
+<div class="row">
 
 <!-- Blog entries -->
-<div class="w3-col l8 s12">
+<div class="col l8 s12">
 
   <!-- Blog entry -->
   <div id="medium-widget"></div>
@@ -35,38 +34,39 @@ and is wrapped around the whole page content, except for the footer in this exam
 </div>
 
 <!-- Introduction menu -->
-<div class="w3-col l4">
+<div class="col l4">
   <!-- About Card -->
-  <div class="w3-card w3-margin w3-margin-top">
+  <div class="card margin margin-top">
   <img src="images/logo_ai_for_humans.jpg" style="width:100%">
-    <div class="w3-container w3-white">
+    <div class="container white">
       <h4><b>My Name</b></h4>
       <p>Artificial Intelligence is a powerful force changing the way we live our lives.</p>
       <p>We humans are at the helm of this force.</p>
       <p>Lets take this oppourtunity to learn from these models, like the powerful teachers they are.</p>
       <p>Doesn't that sound better than guiding human attention towards ads?</p>
+      <p>After all, didn't we create the training sets they learned from?</p>
     </div>
   </div><hr>
 
   <!-- Posts -->
-  <div class="w3-card w3-margin">
-    <div class="w3-container w3-padding">
+  <div class="card margin">
+    <div class="container padding">
       <h4>Links</h4>
     </div>
-    <ul class="w3-ul w3-white">
-      <li class="w3-padding-16">
+    <ul class="ul white">
+      <li class="padding-16">
         <span class="iconify" data-icon="bi:instagram"></span>
-        <span class="w3-large">Instagram</span><br>
+        <span class="large">Instagram</span><br>
         <a href='https://www.instagram.com/ai_for_humans/?hl=en'>@ai_for_humans</a>
       </li>
-      <li class="w3-padding-16">
+      <li class="padding-16">
         <span class="iconify" data-icon="bi:twitter"></span>
-        <span class="w3-large">Twitter</span><br>
+        <span class="large">Twitter</span><br>
         <a href='https://twitter.com/ai_for_humans'>@ai_for_humans</a>
       </li>
-      <li class="w3-padding-16">
+      <li class="padding-16">
         <span class="iconify" data-icon="bi:globe"></span>
-        <span class="w3-large">Me</span><br>
+        <span class="large">Me</span><br>
         <a href='https://www.alecsharpie.me'>www.alecsharpie.me</a>
       </li>
     </ul>
@@ -79,13 +79,14 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- END GRID -->
 </div><br>
 
-<!-- END w3-content -->
+<!-- END content -->
 </div>
 
 <!-- Footer -->
-<footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+<footer class="container dark-grey padding-32 margin-top">
 
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+
+
 </footer>
 
   <script src="https://medium-widget.pixelpoint.io/widget.js"></script>
