remove medium widget, beautify code

--- a/index.html
+++ b/index.html
@@ -5,92 +5,98 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="styles.css">
-<link rel="icon" type="image/png" href="images/favicon.png"/>
+<link rel="icon" type="image/png" href="images/favicon.png" />
 <style>
-body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+    body,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+        font-family: "Raleway", sans-serif
+    }
 </style>
+
 <body class="light-grey">
 
-<!-- content defines a container for fixed size centered content,
+    <!-- content defines a container for fixed size centered content,
 and is wrapped around the whole page content, except for the footer in this example -->
-<div class="content" style="max-width:1400px">
+    <div class="content" style="max-width:1400px">
 
-<!-- Header -->
-<header class="container center padding-32">
-  <h1><b>AI FOR HUMANS</b></h1>
-  <p>understanding <span class="tag">AI</span> to understand <span class="tag">Humans</span></p>
-</header>
+        <!-- Header -->
+        <header class="container center padding-32">
+            <h1><b>AI FOR HUMANS</b></h1>
+            <p>understanding <span class="tag">AI</span> to understand <span class="tag">Humans</span></p>
+        </header>
 
-<!-- Grid -->
-<div class="row">
+        <!-- Grid -->
+        <div class="row">
 
-<!-- Blog entries -->
-<div class="col l8 s12">
+            <!-- Blog entries -->
+            <div class="col l8 s12">
 
-  <!-- Blog entry -->
-  <div id="medium-widget"></div>
-  <hr>
-<!-- END BLOG ENTRIES -->
-</div>
+                <!-- Blog entry -->
+                <!-- About Card -->
+                <div class="card margin margin-top">
+                    <img src="images/logo_ai_for_humans.jpg" style="width:100%">
+                    <div class="container white">
+                        <h4><b>My Name</b></h4>
+                        <p>Artificial Intelligence is a powerful force changing the way we live our lives.</p>
+                        <p>We humans are at the helm of this force.</p>
+                        <p>Lets take this oppourtunity to learn from these models, like the powerful teachers they are.</p>
+                        <p>Doesn't that sound better than guiding human attention towards ads?</p>
+                        <p>After all, didn't we create the training sets they learned from?</p>
+                    </div>
+                </div>
+                <hr>
+                <!-- END BLOG ENTRIES -->
+            </div>
 
-<!-- Introduction menu -->
-<div class="col l4">
-  <!-- About Card -->
-  <div class="card margin margin-top">
-  <img src="images/logo_ai_for_humans.jpg" style="width:100%">
-    <div class="container white">
-      <h4><b>My Name</b></h4>
-      <p>Artificial Intelligence is a powerful force changing the way we live our lives.</p>
-      <p>We humans are at the helm of this force.</p>
-      <p>Lets take this oppourtunity to learn from these models, like the powerful teachers they are.</p>
-      <p>Doesn't that sound better than guiding human attention towards ads?</p>
-      <p>After all, didn't we create the training sets they learned from?</p>
+            <!-- Introduction menu -->
+            <div class="col l4">
+
+                <!-- Posts -->
+                <div class="card margin">
+                    <div class="container padding">
+                        <h4>Links</h4>
+                    </div>
+                    <ul class="ul white">
+                        <li class="padding-16">
+                            <span class="iconify" data-icon="bi:instagram"></span>
+                            <span class="large">Instagram</span><br>
+                            <a href='https://www.instagram.com/ai_for_humans/?hl=en'>@ai_for_humans</a>
+                        </li>
+                        <li class="padding-16">
+                            <span class="iconify" data-icon="bi:twitter"></span>
+                            <span class="large">Twitter</span><br>
+                            <a href='https://twitter.com/ai_for_humans'>@ai_for_humans</a>
+                        </li>
+                        <li class="padding-16">
+                            <span class="iconify" data-icon="bi:globe"></span>
+                            <span class="large">Me</span><br>
+                            <a href='https://www.alecsharpie.me'>www.alecsharpie.me</a>
+                        </li>
+                    </ul>
+                </div>
+                <hr>
+
+                <!-- END Introduction Menu -->
+            </div>
+
+            <!-- END GRID -->
+        </div><br>
+
+        <!-- END content -->
     </div>
-  </div><hr>
 
-  <!-- Posts -->
-  <div class="card margin">
-    <div class="container padding">
-      <h4>Links</h4>
-    </div>
-    <ul class="ul white">
-      <li class="padding-16">
-        <span class="iconify" data-icon="bi:instagram"></span>
-        <span class="large">Instagram</span><br>
-        <a href='https://www.instagram.com/ai_for_humans/?hl=en'>@ai_for_humans</a>
-      </li>
-      <li class="padding-16">
-        <span class="iconify" data-icon="bi:twitter"></span>
-        <span class="large">Twitter</span><br>
-        <a href='https://twitter.com/ai_for_humans'>@ai_for_humans</a>
-      </li>
-      <li class="padding-16">
-        <span class="iconify" data-icon="bi:globe"></span>
-        <span class="large">Me</span><br>
-        <a href='https://www.alecsharpie.me'>www.alecsharpie.me</a>
-      </li>
-    </ul>
-  </div>
-  <hr>
-
-<!-- END Introduction Menu -->
-</div>
-
-<!-- END GRID -->
-</div><br>
-
-<!-- END content -->
-</div>
-
-<!-- Footer -->
-<footer class="container dark-grey padding-32 margin-top">
+    <!-- Footer -->
+    <footer class="container dark-grey padding-32 margin-top">
 
 
 
-</footer>
+    </footer>
 
-  <script src="https://medium-widget.pixelpoint.io/widget.js"></script>
-  <script>MediumWidget.Init({ renderTo: '#medium-widget', params: { "resource": "https://medium.com/@alecsharpie", "postsPerLine": 1, "limit": 5, "picture": "small", "fields": ["description", "author", "publishAt"], "ratio": "original" } })</script>
-  <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
+    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
 </body>
+
 </html>
