format header image

--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
     }
 </style>
 
-<body class="light-grey">
+<body class="white">
+    <header class="head-container">
+        <img src="images/centre_cropped.png" alt="Colourful half brain header image" class=top-img>
+        <h1 class="title t1"><b>AI</b></h1>
+        <h1 class="title t2"><b>FOR</b></h1>
+        <h1 class="title t3"><b>HUMANS</b></h1>
+        <p class="subtitle">understanding <span class="tag">AI</span> to understand <span class="tag">Humans</span></p>
+    </header>
 
     <!-- content defines a container for fixed size centered content,
 and is wrapped around the whole page content, except for the footer in this example -->
     <div class="content" style="max-width:1400px">
 
         <!-- Header -->
-        <header class="container center padding-32">
-            <h1><b>AI FOR HUMANS</b></h1>
-            <p>understanding <span class="tag">AI</span> to understand <span class="tag">Humans</span></p>
-        </header>
+
 
         <!-- Grid -->
         <div class="row">
