add white background for title to image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body class="white">
     <header class="head-container">
-        <img src="images/centre_cropped.png" alt="Colourful half brain header image" class=top-img>
+        <img src="images/header_img.png" alt="Colourful half brain header image" class=top-img>
         <h1 class="title t1"><b>AI</b></h1>
         <h1 class="title t2"><b>FOR</b></h1>
         <h1 class="title t3"><b>HUMANS</b></h1>
