--- a/index.html
+++ b/index.html
@@ -36,15 +36,13 @@ and is wrapped around the whole page content, except for the footer in this exam
         <!-- Grid -->
         <div class="row">
 
-            <!-- Blog entries -->
+            <!-- Main content -->
             <div class="col l8 s12">
 
-                <!-- Blog entry -->
-                <!-- About Card -->
+                <!-- Main Card -->
                 <div class="card margin margin-top">
-                    <img src="images/logo_ai_for_humans.jpg" style="width:100%">
                     <div class="container white">
-                        <h4><b>My Name</b></h4>
+                        <h4><b>Focusing on interpretting AI models to an ELI5 level</b></h4>
                         <p>Artificial Intelligence is a powerful force changing the way we live our lives.</p>
                         <p>We humans are at the helm of this force.</p>
                         <p>Lets take this oppourtunity to learn from these models, like the powerful teachers they are.</p>
@@ -53,13 +51,13 @@ and is wrapped around the whole page content, except for the footer in this exam
                     </div>
                 </div>
                 <hr>
-                <!-- END BLOG ENTRIES -->
+                <!-- END MAIN CONTENT -->
             </div>
 
-            <!-- Introduction menu -->
+            <!-- Sidebar Info -->
             <div class="col l4">
 
-                <!-- Posts -->
+                <!-- Links -->
                 <div class="card margin">
                     <div class="container padding">
                         <h4>Links</h4>
@@ -75,14 +73,22 @@ and is wrapped around the whole page content, except for the footer in this exam
                             <span class="large">Twitter</span><br>
                             <a href='https://twitter.com/ai_for_humans'>@ai_for_humans</a>
                         </li>
+                    </ul>
+                </div>
+                <hr>
+                <!-- Team -->
+                <div class="card margin">
+                    <div class="container padding">
+                        <h4>Team</h4>
+                    </div>
+                    <ul class="ul white">
                         <li class="padding-16">
-                            <span class="iconify" data-icon="bi:globe"></span>
-                            <span class="large">Me</span><br>
+                            <span>🐙</span>
+                            <span class="large">Alec Sharp</span><br>
                             <a href='https://www.alecsharpie.me'>www.alecsharpie.me</a>
                         </li>
                     </ul>
                 </div>
-                <hr>
 
                 <!-- END Introduction Menu -->
             </div>
