add content and change subtitle

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="title t1"><b>AI</b></h1>
         <h1 class="title t2"><b>FOR</b></h1>
         <h1 class="title t3"><b>HUMANS</b></h1>
-        <p class="subtitle">understanding <span class="tag">AI</span> to understand <span class="tag">Humans</span></p>
+        <p class="subtitle">Basic <span class="tag">Artificial Intelligence</span> Literacy</p>
     </header>
 
     <!-- content defines a container for fixed size centered content,
@@ -48,6 +48,17 @@ and is wrapped around the whole page content, except for the footer in this exam
                         <p>Lets take this oppourtunity to learn from these models, like the powerful teachers they are.</p>
                         <p>Doesn't that sound better than guiding human attention towards ads?</p>
                         <p>After all, didn't we create the training sets they learned from?</p>
+                        <p>How do AI make their decisions?</p>
+                        <p>The fundamental simailarity is we are relying more and more on AI to make our decisions for us.</p>
+                        <p>"Robots" already control alot of what we do</p>
+                        <p>We are, and will continue to, embrace the "robot takeover"</p>
+                        <p>For some, this heavy reliance on a mysterious force will be frightening</p>
+                        <p>And so I revert back to our mission statement</p>
+                        <p>Everybody should have Basic AI Literacy, to help soften the blow, and ease the transition into the age fo AI.</p>
+                        <p>Examples</p>
+                        <p>netflix recommender</p>
+                        <p>chess recommender</p>
+                        <p>warehouse optimization</p>
                     </div>
                 </div>
                 <hr>
