add inspiration card

--- a/index.html
+++ b/index.html
@@ -96,7 +96,21 @@ and is wrapped around the whole page content, except for the footer in this exam
                         <li class="padding-16">
                             <span>🐙</span>
                             <span class="large">Alec Sharp</span><br>
-                            <a href='https://www.alecsharpie.me'>www.alecsharpie.me</a>
+                            <a href='https://www.alecsharpie.me'>alecsharpie.me</a>
+                        </li>
+                    </ul>
+                </div>
+                <hr>
+                <!-- Inspiration -->
+                <div class="card margin">
+                    <div class="container padding">
+                        <h4>Inspiration</h4>
+                    </div>
+                    <ul class="ul white">
+                        <li class="padding-16">
+                            <span>🐙</span>
+                            <span class="large">Christopher Olah</span><br>
+                            <a href='http://colah.github.io/'>colah.github.io</a>
                         </li>
                     </ul>
                 </div>
