update content to publishable-ish status

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="title t1"><b>AI</b></h1>
         <h1 class="title t2"><b>FOR</b></h1>
         <h1 class="title t3"><b>HUMANS</b></h1>
-        <p class="subtitle">Basic <span class="tag">Artificial Intelligence</span> Literacy</p>
+        <p class="subtitle">Basic <span class="tag">Artificial Intelligence</span> Literacy for All.</p>
     </header>
 
     <!-- content defines a container for fixed size centered content,
@@ -42,26 +42,36 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <!-- Main Card -->
                 <div class="card margin margin-top">
                     <div class="container white">
-                        <h4><b>Focusing on interpretting AI models to an ELI5 level</b></h4>
-                        <p>Artificial Intelligence is a powerful force changing the way we live our lives.</p>
-                        <p>We humans are at the helm of this force.</p>
-                        <p>Lets take this oppourtunity to learn from these models, like the powerful teachers they are.</p>
-                        <p>Doesn't that sound better than guiding human attention towards ads?</p>
-                        <p>After all, didn't we create the training sets they learned from?</p>
-                        <p>How do AI make their decisions?</p>
-                        <p>The fundamental simailarity is we are relying more and more on AI to make our decisions for us.</p>
-                        <p>"Robots" already control alot of what we do</p>
-                        <p>We are, and will continue to, embrace the "robot takeover"</p>
-                        <p>For some, this heavy reliance on a mysterious force will be frightening</p>
-                        <p>And so I revert back to our mission statement</p>
-                        <p>Everybody should have Basic AI Literacy, to help soften the blow, and ease the transition into the age fo AI.</p>
-                        <p>Examples</p>
-                        <p>netflix recommender</p>
-                        <p>chess recommender</p>
-                        <p>warehouse optimization</p>
+                        <h2>Everyone generates data but not everyone gets to benefit from it.</h3>
+                            <p>The more you understand AI the better position you are in to benefit.</p>
+                            <h4>Let us explain Artificial Intelligence to you like you are 5 years old</h4>
+                            <p>Take this oppourtunity to learn about these models, from these models, like the powerful teachers they are.</p>
+                            <br>
+                            <h3>Why would you invest your time to learn about AI?</h5>
+                                <p>Artificial Intelligence is a powerful force changing the way we live our lives.</p>
+                                <p>We humans are at the helm of this force, however it should be shared for the good of the planet, not only in the hands of a select few.</p>
+                                <p>As Artificial Intelligence is integrated into more parts of our lives, this inequality looks to increase.</p>
+                                <p>This increased integration is already showing, humans are relying more and more on AI to make our decisions for us.</p>
+                                <p>For example:</p>
+                                <ul>
+                                    <li>Netflix, Spotify, Youtube, & Instagram recommending you content rather than you deciding for yourself.</li>
+                                    <li>The top chess players are recommended moves by Chess AI's</li>
+                                    <li>Warehouse's optimize the movement of human workers to maximise efficiency</li>
+                                    <li>Purchase recommendation's in the form of optimized advertising run deeply throughout all areas of life</li>
+                                    <li>etc..</li>
+                                </ul>
+                                <p>That is to say, humans are currently embracing the "robot takeover" with open arms.</p>
+                                <p>While we transition into the age of AI, we need to ensure our individual and collective actions propel humanity towards a future with equal oppourtunity to AI's benefits.</p>
+                                <p>And so our mission statement, basic artifical intelligence literacy for all.</p>
                     </div>
                 </div>
                 <hr>
+                <div class="card margin margin-top">
+                    <div class="container white">
+                        <h2>Coming Soon...</h2>
+                        <p>We will be hosting a competition around communicating AI. More details to be released early December 2021.</p>
+                    </div>
+                </div>
                 <!-- END MAIN CONTENT -->
             </div>
 
@@ -104,13 +114,19 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <!-- Inspiration -->
                 <div class="card margin">
                     <div class="container padding">
-                        <h4>Inspiration</h4>
+                        <h4>Great Resources</h4>
                     </div>
                     <ul class="ul white">
+                        <!--
                         <li class="padding-16">
                             <span>🐙</span>
                             <span class="large">Christopher Olah</span><br>
                             <a href='http://colah.github.io/'>colah.github.io</a>
+                        </li>
+                      -->
+                        <li class="padding-16">
+                            <span>🕦</span>
+                            <span class="large">To be Cont..</span><br>
                         </li>
                     </ul>
                 </div>
@@ -125,7 +141,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
 
     <!-- Footer -->
-    <footer class="container dark-grey padding-32 margin-top">
+    <footer class="container white padding-32 margin-top">
 
 
 
