--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@ and is wrapped around the whole page content, except for the footer in this exam
                                 <p>This increased integration is already showing, humans are relying more and more on AI to make our decisions for us.</p>
                                 <p>For example:</p>
                                 <ul>
-                                    <li>Netflix, Spotify, Youtube, & Instagram recommending you content rather than you deciding for yourself.</li>
-                                    <li>The top chess players are recommended moves by Chess AI's</li>
-                                    <li>Warehouse's optimize the movement of human workers to maximise efficiency</li>
-                                    <li>Purchase recommendation's in the form of optimized advertising run deeply throughout all areas of life</li>
-                                    <li>etc..</li>
+                                    <li>Netflix, Spotify, Youtube, Instagram, etc. recommending you content rather than you deciding for yourself.</li>
+                                    <li>The top chess players are recommended moves by Chess AI's.</li>
+                                    <li>Warehouse's optimize the movement of human workers to maximise efficiency using AI.</li>
+                                    <li>Purchase recommendation's in the form of optimized advertising run deeply throughout all areas of life.</li>
                                 </ul>
                                 <p>That is to say, humans are currently embracing the "robot takeover" with open arms.</p>
                                 <p>While we transition into the age of AI, we need to ensure our individual and collective actions propel humanity towards a future with equal oppourtunity to AI's benefits.</p>
@@ -69,7 +68,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <div class="card margin margin-top">
                     <div class="container white">
                         <h2>Coming Soon...</h2>
-                        <p>We will be hosting a competition around communicating AI. More details to be released early December 2021.</p>
+                        <p>We will be hosting a competition based on communicating AI. More details to be released early December 2021.</p>
                     </div>
                 </div>
                 <!-- END MAIN CONTENT -->
