add team members

--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@ and is wrapped around the whole page content, except for the footer in this exam
                             <span class="large">Alec Sharp</span><br>
                             <a href='https://www.alecsharpie.me'>alecsharpie.me</a>
                         </li>
+                        <li class="padding-16">
+                            <span>🦖</span>
+                            <span class="large">You?</span><br>
+                            <a href='https://www.alecsharpie.me'>get in contact</a>
+                        </li>
                     </ul>
                 </div>
                 <hr>
