fix spelling errors

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                                 </ul>
                                 <p>That is to say, humans are currently embracing the "robot takeover" with open arms.</p>
                                 <p>While we transition into the age of AI, we need to ensure our individual and collective actions propel humanity towards a future with equal oppourtunity to AI's benefits.</p>
-                                <p>And so our mission statement, basic artifical intelligence literacy for all.</p>
+                                <p>And so our mission statement, basic artificial intelligence literacy for all.</p>
                     </div>
                 </div>
                 <hr>
