add somewheresy to giants

--- a/index.html
+++ b/index.html
@@ -118,19 +118,18 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <!-- Inspiration -->
                 <div class="card margin">
                     <div class="container padding">
-                        <h4>Great Resources</h4>
+                        <h4>Standing of the Shoulders of Giants</h4>
                     </div>
                     <ul class="ul white">
-                        <!--
                         <li class="padding-16">
-                            <span>🐙</span>
+                            <span>🧠</span>
                             <span class="large">Christopher Olah</span><br>
                             <a href='http://colah.github.io/'>colah.github.io</a>
                         </li>
-                      -->
                         <li class="padding-16">
-                            <span>🕦</span>
-                            <span class="large">To be Cont..</span><br>
+                            <span>🐬</span>
+                            <span class="large">Somewheresy</span><br>
+                            <a href='https://twitter.com/somewheresy'>colah.github.io</a>
                         </li>
                     </ul>
                 </div>
