add giants somewheresy & adverb

--- a/index.html
+++ b/index.html
@@ -129,7 +129,12 @@ and is wrapped around the whole page content, except for the footer in this exam
                         <li class="padding-16">
                             <span>🐬</span>
                             <span class="large">Somewheresy</span><br>
-                            <a href='https://twitter.com/somewheresy'>colah.github.io</a>
+                            <a href='https://twitter.com/somewheresy'>@somewheresy (twitter)</a>
+                        </li>
+                        <li class="padding-16">
+                            <span>🌳</span>
+                            <span class="large">Adverb</span><br>
+                            <a href='https://twitter.com/advadnoun'>@advadnoun (twitter)</a>
                         </li>
                     </ul>
                 </div>
