--- a/index.html
+++ b/index.html
@@ -63,99 +63,96 @@ and is wrapped around the whole page content, except for the footer in this exam
                                 <p>While we transition into the age of AI, we need to ensure our individual and collective actions propel humanity towards a future with equal oppourtunity to AI's benefits.</p>
                                 <p>And so our mission statement, basic artificial intelligence literacy for all.</p>
                     </div>
+                    <!-- END MAIN CONTENT -->
                 </div>
-                <hr>
-                <div class="card margin margin-top">
-                    <div class="container white">
-                        <h2>Coming Soon...</h2>
-                        <p>We will be hosting a competition based on communicating AI. More details to be released early December 2021.</p>
+
+                <!-- Sidebar Info -->
+                <div class="col l4">
+
+                    <!-- Links -->
+                    <div class="card margin">
+                        <div class="container padding">
+                            <h4>Links</h4>
+                        </div>
+                        <ul class="ul white">
+                            <li class="padding-16">
+                                <span class="iconify" data-icon="bi:instagram"></span>
+                                <span class="large">Instagram</span><br>
+                                <a href='https://www.instagram.com/ai_for_humans/?hl=en'>@ai_for_humans</a>
+                            </li>
+                            <li class="padding-16">
+                                <span class="iconify" data-icon="bi:twitter"></span>
+                                <span class="large">Twitter</span><br>
+                                <a href='https://twitter.com/ai_for_humans'>@ai_for_humans</a>
+                            </li>
+                        </ul>
                     </div>
-                </div>
-                <!-- END MAIN CONTENT -->
-            </div>
-
-            <!-- Sidebar Info -->
-            <div class="col l4">
-
-                <!-- Links -->
-                <div class="card margin">
-                    <div class="container padding">
-                        <h4>Links</h4>
+                    <hr>
+                    <!-- Team -->
+                    <div class="card margin">
+                        <div class="container padding">
+                            <h4>Team</h4>
+                        </div>
+                        <ul class="ul white">
+                            <li class="padding-16">
+                                <span>🐙</span>
+                                <span class="large">Alec Sharp</span><br>
+                                <a href='https://www.alecsharpie.me'>alecsharpie.me</a>
+                            </li>
+                            <li class="padding-16">
+                                <span>🦖</span>
+                                <span class="large">You?</span><br>
+                                <a href='https://www.alecsharpie.me'>get in contact</a>
+                            </li>
+                        </ul>
                     </div>
-                    <ul class="ul white">
-                        <li class="padding-16">
-                            <span class="iconify" data-icon="bi:instagram"></span>
-                            <span class="large">Instagram</span><br>
-                            <a href='https://www.instagram.com/ai_for_humans/?hl=en'>@ai_for_humans</a>
-                        </li>
-                        <li class="padding-16">
-                            <span class="iconify" data-icon="bi:twitter"></span>
-                            <span class="large">Twitter</span><br>
-                            <a href='https://twitter.com/ai_for_humans'>@ai_for_humans</a>
-                        </li>
-                    </ul>
-                </div>
-                <hr>
-                <!-- Team -->
-                <div class="card margin">
-                    <div class="container padding">
-                        <h4>Team</h4>
+                    <hr>
+                    <!-- Inspiration -->
+                    <div class="card margin">
+                        <div class="container padding">
+                            <h4>Standing of the Shoulders of Giants</h4>
+                        </div>
+                        <ul class="ul white">
+                            <li class="padding-16">
+                                <span>🧠</span>
+                                <span class="large">Christopher Olah</span><br>
+                                <a href='http://colah.github.io/'>colah.github.io</a>
+                            </li>
+                            <li class="padding-16">
+                                <span>🐬</span>
+                                <span class="large">Somewheresy</span><br>
+                                <a href='https://twitter.com/somewheresy'>@somewheresy (twitter)</a>
+                            </li>
+                            <li class="padding-16">
+                                <span>🌳</span>
+                                <span class="large">Adverb</span><br>
+                                <a href='https://twitter.com/advadnoun'>@advadnoun (twitter)</a>
+                            </li>
+                            <li class="padding-16">
+                                <span>🌳</span>
+                                <span class="large">Adverb</span><br>
+                                <a href='https://twitter.com/RiversHaveWings'>@RiversHaveWings (twitter)</a>
+                            </li>
+                        </ul>
                     </div>
-                    <ul class="ul white">
-                        <li class="padding-16">
-                            <span>🐙</span>
-                            <span class="large">Alec Sharp</span><br>
-                            <a href='https://www.alecsharpie.me'>alecsharpie.me</a>
-                        </li>
-                        <li class="padding-16">
-                            <span>🦖</span>
-                            <span class="large">You?</span><br>
-                            <a href='https://www.alecsharpie.me'>get in contact</a>
-                        </li>
-                    </ul>
-                </div>
-                <hr>
-                <!-- Inspiration -->
-                <div class="card margin">
-                    <div class="container padding">
-                        <h4>Standing of the Shoulders of Giants</h4>
-                    </div>
-                    <ul class="ul white">
-                        <li class="padding-16">
-                            <span>🧠</span>
-                            <span class="large">Christopher Olah</span><br>
-                            <a href='http://colah.github.io/'>colah.github.io</a>
-                        </li>
-                        <li class="padding-16">
-                            <span>🐬</span>
-                            <span class="large">Somewheresy</span><br>
-                            <a href='https://twitter.com/somewheresy'>@somewheresy (twitter)</a>
-                        </li>
-                        <li class="padding-16">
-                            <span>🌳</span>
-                            <span class="large">Adverb</span><br>
-                            <a href='https://twitter.com/advadnoun'>@advadnoun (twitter)</a>
-                        </li>
-                    </ul>
+
+                    <!-- END Introduction Menu -->
                 </div>
 
-                <!-- END Introduction Menu -->
-            </div>
+                <!-- END GRID -->
+            </div><br>
 
-            <!-- END GRID -->
-        </div><br>
+            <!-- END content -->
+        </div>
 
-        <!-- END content -->
-    </div>
-
-    <!-- Footer -->
-    <footer class="container white padding-32 margin-top">
+        <!-- Footer -->
+        <footer class="container white padding-32 margin-top">
 
 
 
-    </footer>
+        </footer>
 
-    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
+        <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
 </body>
 
 </html>
