--- a/index.html
+++ b/index.html
@@ -47,112 +47,99 @@ and is wrapped around the whole page content, except for the footer in this exam
                             <h4>Let us explain Artificial Intelligence to you like you are 5 years old</h4>
                             <p>Take this oppourtunity to learn about these models, from these models, like the powerful teachers they are.</p>
                             <br>
-                            <h3>Why would you invest your time to learn about AI?</h5>
-                                <p>Artificial Intelligence is a powerful force changing the way we live our lives.</p>
-                                <p>We humans are at the helm of this force, however it should be shared for the good of the planet, not only in the hands of a select few.</p>
-                                <p>As Artificial Intelligence is integrated into more parts of our lives, this inequality looks to increase.</p>
-                                <p>This increased integration is already showing, humans are relying more and more on AI to make our decisions for us.</p>
-                                <p>For example:</p>
-                                <ul>
-                                    <li>Netflix, Spotify, Youtube, Instagram, etc. recommending you content rather than you deciding for yourself.</li>
-                                    <li>The top chess players are recommended moves by Chess AI's.</li>
-                                    <li>Warehouse's optimize the movement of human workers to maximise efficiency using AI.</li>
-                                    <li>Purchase recommendation's in the form of optimized advertising run deeply throughout all areas of life.</li>
-                                </ul>
-                                <p>That is to say, humans are currently embracing the "robot takeover" with open arms.</p>
-                                <p>While we transition into the age of AI, we need to ensure our individual and collective actions propel humanity towards a future with equal oppourtunity to AI's benefits.</p>
-                                <p>And so our mission statement, basic artificial intelligence literacy for all.</p>
+
                     </div>
-                    <!-- END MAIN CONTENT -->
+                </div>
+                <!-- END MAIN CONTENT -->
+            </div>
+
+            <!-- Sidebar Info -->
+            <div class="col l4">
+
+                <!-- Links -->
+                <div class="card margin">
+                    <div class="container padding">
+                        <h4>Links</h4>
+                    </div>
+                    <ul class="ul white">
+                        <li class="padding-16">
+                            <span class="iconify" data-icon="bi:instagram"></span>
+                            <span class="large">Instagram</span><br>
+                            <a href='https://www.instagram.com/ai_for_humans/?hl=en'>@ai_for_humans</a>
+                        </li>
+                        <li class="padding-16">
+                            <span class="iconify" data-icon="bi:twitter"></span>
+                            <span class="large">Twitter</span><br>
+                            <a href='https://twitter.com/ai_for_humans'>@ai_for_humans</a>
+                        </li>
+                    </ul>
+                </div>
+                <hr>
+                <!-- Team -->
+                <div class="card margin">
+                    <div class="container padding">
+                        <h4>Team</h4>
+                    </div>
+                    <ul class="ul white">
+                        <li class="padding-16">
+                            <span>🐙</span>
+                            <span class="large">Alec Sharp</span><br>
+                            <a href='https://www.alecsharpie.me'>alecsharpie.me</a>
+                        </li>
+                        <li class="padding-16">
+                            <span>🦖</span>
+                            <span class="large">You?</span><br>
+                            <a href='https://www.alecsharpie.me'>get in contact</a>
+                        </li>
+                    </ul>
+                </div>
+                <hr>
+                <!-- Inspiration -->
+                <div class="card margin">
+                    <div class="container padding">
+                        <h4>Standing of the Shoulders of Giants</h4>
+                    </div>
+                    <ul class="ul white">
+                        <li class="padding-16">
+                            <span>⭐</span>
+                            <span class="large">Christopher Olah</span><br>
+                            <a href='http://colah.github.io/'>colah.github.io</a>
+                        </li>
+                        <li class="padding-16">
+                            <span>⭐</span>
+                            <span class="large">Somewheresy</span><br>
+                            <a href='https://twitter.com/somewheresy'>@somewheresy (twitter)</a>
+                        </li>
+                        <li class="padding-16">
+                            <span>⭐</span>
+                            <span class="large">Adverb</span><br>
+                            <a href='https://twitter.com/advadnoun'>@advadnoun (twitter)</a>
+                        </li>
+                        <li class="padding-16">
+                            <span>⭐</span>
+                            <span class="large">RiversHaveWings</span><br>
+                            <a href='https://twitter.com/RiversHaveWings'>@RiversHaveWings (twitter)</a>
+                        </li>
+                    </ul>
                 </div>
 
-                <!-- Sidebar Info -->
-                <div class="col l4">
+                <!-- END Introduction Menu -->
+            </div>
 
-                    <!-- Links -->
-                    <div class="card margin">
-                        <div class="container padding">
-                            <h4>Links</h4>
-                        </div>
-                        <ul class="ul white">
-                            <li class="padding-16">
-                                <span class="iconify" data-icon="bi:instagram"></span>
-                                <span class="large">Instagram</span><br>
-                                <a href='https://www.instagram.com/ai_for_humans/?hl=en'>@ai_for_humans</a>
-                            </li>
-                            <li class="padding-16">
-                                <span class="iconify" data-icon="bi:twitter"></span>
-                                <span class="large">Twitter</span><br>
-                                <a href='https://twitter.com/ai_for_humans'>@ai_for_humans</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <hr>
-                    <!-- Team -->
-                    <div class="card margin">
-                        <div class="container padding">
-                            <h4>Team</h4>
-                        </div>
-                        <ul class="ul white">
-                            <li class="padding-16">
-                                <span>🐙</span>
-                                <span class="large">Alec Sharp</span><br>
-                                <a href='https://www.alecsharpie.me'>alecsharpie.me</a>
-                            </li>
-                            <li class="padding-16">
-                                <span>🦖</span>
-                                <span class="large">You?</span><br>
-                                <a href='https://www.alecsharpie.me'>get in contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <hr>
-                    <!-- Inspiration -->
-                    <div class="card margin">
-                        <div class="container padding">
-                            <h4>Standing of the Shoulders of Giants</h4>
-                        </div>
-                        <ul class="ul white">
-                            <li class="padding-16">
-                                <span>🧠</span>
-                                <span class="large">Christopher Olah</span><br>
-                                <a href='http://colah.github.io/'>colah.github.io</a>
-                            </li>
-                            <li class="padding-16">
-                                <span>🐬</span>
-                                <span class="large">Somewheresy</span><br>
-                                <a href='https://twitter.com/somewheresy'>@somewheresy (twitter)</a>
-                            </li>
-                            <li class="padding-16">
-                                <span>🌳</span>
-                                <span class="large">Adverb</span><br>
-                                <a href='https://twitter.com/advadnoun'>@advadnoun (twitter)</a>
-                            </li>
-                            <li class="padding-16">
-                                <span>🌳</span>
-                                <span class="large">Adverb</span><br>
-                                <a href='https://twitter.com/RiversHaveWings'>@RiversHaveWings (twitter)</a>
-                            </li>
-                        </ul>
-                    </div>
+            <!-- END GRID -->
+        </div><br>
 
-                    <!-- END Introduction Menu -->
-                </div>
+        <!-- END content -->
+    </div>
 
-                <!-- END GRID -->
-            </div><br>
-
-            <!-- END content -->
-        </div>
-
-        <!-- Footer -->
-        <footer class="container white padding-32 margin-top">
+    <!-- Footer -->
+    <footer class="container white padding-32 margin-top">
 
 
 
-        </footer>
+    </footer>
 
-        <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
+    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
 </body>
 
 </html>
