--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="title t1"><b>AI</b></h1>
         <h1 class="title t2"><b>FOR</b></h1>
         <h1 class="title t3"><b>HUMANS</b></h1>
-        <p class="subtitle">Basic <span class="tag">Artificial Intelligence</span> Literacy for All.</p>
+        <p class="subtitle">Basic <span class="tag">Artificial Intelligence</span> Literacy</p>
     </header>
 
     <!-- content defines a container for fixed size centered content,
@@ -42,11 +42,11 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <!-- Main Card -->
                 <div class="card margin margin-top">
                     <div class="container white">
-                        <h2>Everyone generates data but not everyone gets to benefit from it.</h3>
-                            <p>The more you understand AI the better position you are in to benefit.</p>
-                            <h4>Let us explain Artificial Intelligence to you like you are 5 years old</h4>
-                            <p>Take this oppourtunity to learn about these models, from these models, like the powerful teachers they are.</p>
-                            <br>
+                        <h3>Everyone generates data but not everyone gets to benefit from it.</h3>
+                        <p>The more you understand AI the better position you are in to benefit.</p>
+                        <p>Let us explain Artificial Intelligence to you like you are 5 years old</p>
+                        <p>Take this oppourtunity to learn about these models, from these models, like the powerful teachers they are.</p>
+                        <br>
 
                     </div>
                 </div>
@@ -54,7 +54,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <!-- Links -->
                 <div class="card margin">
                     <div class="container padding">
-                        <h4>Links</h4>
+                        <h3>Links</h3>
                     </div>
                     <ul class="ul white">
                         <li class="padding-16">
